# CryptEX_Core

./: .gitignore  CMakeLists.txt  LICENSE  README.md  RELEASE_NOTES.md  WHITEPAPER.md
archives/: CryptEX_Whitepaper_Source_April_2026.md
docs/: pow.md
gui/: CMakeLists.txt
gui/app/: ChatWindow.cpp  DaemonController.cpp  DaemonController.hpp  MainWindow.cpp  MainWindow.hpp  MinerController.cpp  MinerController.hpp  main.cpp
gui/resources/: branding.qrc
gui/rpc/: RpcClient.cpp  RpcClient.hpp
gui/views/: ChatPage.cpp  ChatPage.hpp  DashboardPage.cpp  DashboardPage.hpp  MiningPage.cpp  MiningPage.hpp  NetworkGraphPage.cpp  NetworkGraphPage.hpp  PublicDirectoryPage.cpp  PublicDirectoryPage.hpp  ReceivePage.cpp  ReceivePage.hpp  TerminalPage.cpp  TerminalPage.hpp  VoiceCallPage.cpp  VoiceCallPage.hpp  WalletPage.cpp  WalletPage.hpp
scripts/: build-release-matrix.sh  package-linux-appimage.sh  package-windows-runtime.sh  stage-release.sh
src/: CMakeLists.txt  base64.cpp  base64.hpp  block.cpp  block.hpp  block_store.cpp  block_store.hpp  blockchain.cpp  blockchain.hpp  chainparams.cpp  chainparams.hpp  chat_content.cpp  chat_content.hpp  chat_history.cpp  chat_history.hpp  chat_secure.cpp  chat_secure.hpp  chat_state.cpp  chat_state.hpp  constants.hpp  main.cpp  mempool.cpp  mempool.hpp  network.cpp  network.hpp  powminer_main.cpp  rpc.cpp  rpc.hpp  script.hpp  tests.cpp  transaction.hpp  types.cpp  types.hpp  utxo.cpp  utxo.hpp  wallet.cpp  wallet.hpp
toolchains/: mingw-w64-arm64.cmake  mingw-w64-x86_64.cmake
website/: .env.example  README.md
website/app/: config.py  main.py
website/deploy/: cryptex-website.service.example
website/static/css/: site.css
website/templates/: base.html
